kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dm-demo
  namespace: dm-demo
spec:
  selector:
    app: decision-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
